fix overflow

--- a/blocks/Epilogue.module.css
+++ b/blocks/Epilogue.module.css
@@ -20,14 +20,21 @@
   letter-spacing: var(--h1-letter-spacing);
   text-align: center;
   overflow: hidden;
-  background: linear-gradient(100deg, hsl(180, 100%, 50%), hsl(190, 100%, 65%), hsl(160, 100%, 65%));
+  background: linear-gradient(
+    100deg,
+    hsl(180, 100%, 50%),
+    hsl(190, 100%, 65%),
+    hsl(160, 100%, 65%)
+  );
   background-clip: text;
   -webkit-text-fill-color: transparent;
   /* stroke */
   -webkit-text-stroke: 1px var(--text-shade);
 }
 
-.subtitle, .subtitle1, .subtitle2 {
+.subtitle,
+.subtitle1,
+.subtitle2 {
   font-size: var(--subtitle-font-size);
   font-weight: var(--subtitle-font-weight);
   line-height: var(--subtitle-line-height);
@@ -43,6 +50,7 @@
 .subtitle2 {
   color: var(--text-shade);
   font-size: medium;
+  overflow: hidden;
 }
 
 .illustration {
@@ -51,5 +59,5 @@
   height: 240px;
   margin: 0 auto;
   background: var(--illustration);
-  border-radius: 8px;;
+  border-radius: 8px;
 }
